--- a/src/Acme.BookStore.Blazor/Pages/PlanSelection.razor
+++ b/src/Acme.BookStore.Blazor/Pages/PlanSelection.razor
@@ -1,7 +1,9 @@
 @page "/plan-selection"
+@using Acme.BookStore.Memberships
 @using Acme.BookStore.Plans
 @using Acme.BookStore.Users
 @using Blazorise
+@using Volo.Abp.Identity
 @using Volo.Abp.Users
 @inject IPlanAppService PlanAppService
 @inject ICurrentUser CurrentUser
